--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="required_field">Required field</string>
     <string name="not_correct">Not Correct</string>
+    <string name="distance">distance</string>
+    <string name="rating">rating</string>
 </resources>
